--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -11,5 +11,6 @@ rmd_files: [
   "01-exploring.Rmd",
   "02-sampling.Rmd",
   "03-describing.Rmd",
+  "04-numerical_relationships.Rmd",
   "99-references.Rmd"
   ]
