--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -15,5 +15,6 @@ rmd_files: [
   "05-randomization.Rmd",
   "06-bootstrapping.Rmd",
   "07-normal_distribution.Rmd",
+  "08-inference_proportions.Rmd",
   "99-references.Rmd"
   ]
