--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -18,5 +18,6 @@ rmd_files: [
   "08-inference_proportions.Rmd",
   "09-single_mean.Rmd",
   "10-two_indep_means.Rmd",
+  "11-paired_means.Rmd",
   "99-references.Rmd"
   ]
